# VTsim

./: .gitignore  README.md  format-samplejson.json  pwm_anomaly_report_v3.md  pwm_r2c2_records (3).csv  pyproject.toml  pytest.ini  run.sh  test.py
custom_components/: __init__.py  heating_simulator  versatile_thermostat
docs/: vtsim-pwm-fidelity.md  vtsim-smartpi-deadband-vs-nearband.md
tests/: conftest.py  test_core_changes.py  test_scenario_from_export.py  test_sensor_pipeline.py  test_validation.py  test_vt_scenarios.py  vt_loader.py
tests/models/: pwm_r2c2.yaml  pwm_r2c2_radiator.yaml  pwm_radiator.yaml  pwm_simple.yaml  r2c2-pwm.yaml  r2c2-radiator-external.yaml  r2c2-radiator.yaml  r2c2-weather.yaml  sim-simple-pwm.yaml  simple-radiator-with-disturbances.yaml  simple-radiator.yaml  validation_sim_simple_pwm.yaml
tests/scenarios/: _template.yaml
tests/sim/: analysis.py  engine.py  models.py  sensor_pipeline.py  virtual_entities.py
tests/test_backend/: test_api.py  test_config.py  test_importer.py  test_runs.py  test_scenarios.py  test_versions.py
tests/unit/: test_models_backend.py  test_presets_backend.py  test_runs_schedule.py  test_schedules_backend.py  test_virtual_entities.py  test_vt_loader.py  test_vt_versions_backend.py
tests/validation/: README.md  compare.py  ha_parser.py
tools/: compare.py  scenario_from_export.py
webapp/: presets.json  schedules.json  vt_versions.json
webapp/backend/: config.py  fs_browser.py  ha_compare.py  heating_sim.py  importer.py  main.py  models.py  presets.py  runs.py  schedules.py  verify.py  vt_versions.py
(+24 files in other folders)
